# qtchatron

./: .gitignore  CMakeLists.txt  readme.md
client/: CMakeLists.txt  Main.qml  MainPage.qml  authcontroller.cpp  authcontroller.h  authmodel.cpp  authmodel.h  channel.cpp  channel.h  channelcontroller.cpp  channelcontroller.h  channelmodel.cpp  channelmodel.h  chatclient.cpp  chatclient.h  chatcontroller.cpp  chatcontroller.h  chatmessageitem.cpp  chatmessageitem.h  chatmessagelist.cpp  chatmessagelist.h  chatmodel.cpp  chatmodel.h  client.cpp  client.h  clientcontroller.cpp  clientcontroller.h  clientmanager.cpp  clientmanager.h  communicator.cpp  communicator.h  customtheme.cpp  customtheme.h  main.cpp  mainpagerouter.cpp  mainpagerouter.h  messagemodel.cpp  messagemodel.h  qml.qrc  qrc.qrc  (+17 more)
client/Communicator/: Communicator.cpp  Communicator.h
client/Protocol/: protocol.cpp  protocol.h
client/certs/: client.crt  client.key  server.crt
client/config/: config.json
client/view/: Main.qml  qtquickcontrols2.conf
client/view/components/channels/: ChannelIcon.qml  ChannelInfobar.qml  ChannelPage.qml  ThreadItem.qml
client/view/components/chat/: ChatListItem.qml  ChatView.qml
client/view/components/directMessage/: DirectMessageListItem.qml  DirectMessageOverviewPage.qml
client/view/components/mainPage/: AddChannelPopup.qml  AddChatPopup.qml  Settings.qml  Sidebar.qml  Topbar.qml
client/view/components/user/: UserCard.qml  UserIcon.qml
client/view/pages/: LoadingPage.qml  LoginPage.qml  Main.qml  MainPage.qml  SignupPage.qml
server/: CMakeLists.txt  commandrouter.cpp  commandrouter.h  main.cpp  server.cpp  server.h  serverworker.cpp  serverworker.h
server/CommandHandler/: CommandHandler.cpp  CommandHandler.h  command.cpp  command.h
server/Database/: database.db  databasehandler.cpp  databasehandler.h
server/Protocol/: protocol.cpp  protocol.h
server/Server/: Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h
server/Utils/: databaseresponse.cpp  databaseresponse.h
server/certs/: server.crt  server.key
